--- a/Index.html
+++ b/Index.html
@@ -25,9 +25,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="About.html">About Me</a></li>
+							<li class="active"><a href="Index.html">About Me</a></li>
 							<li><a href="Projects.html">Projects</a></li>
-							<!--<li class="active"><a href="About.html">About Me</a></li>-->
+							<!--<li class="active"><a href="Index.html">About Me</a></li>-->
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/rajesh-gaddam-a0171a15b/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
