--- a/Projects.html
+++ b/Projects.html
@@ -35,9 +35,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="About.html">About Me</a></li>
+							<li><a href="Index.html">About Me</a></li>
 							<li class="active"><a href="Projects.html">Projects</a></li>
-							<!--<li><a href="About.html">About Me</a></li>-->
+							<!--<li><a href="Index.html">About Me</a></li>-->
 
 
 						</ul>
