--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="Projects.html" class="logo">RG</a>
+						<a href="" class="logo">RG</a>
 					</header>
 
 				<!-- Nav -->
