--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="Index.html">About Me</a></li>
+							<li class="active"><a href="index.html">About Me</a></li>
 							<li><a href="Projects.html">Projects</a></li>
 							<!--<li class="active"><a href="Index.html">About Me</a></li>-->
 						</ul>
