--- a/Projects.html
+++ b/Projects.html
@@ -35,7 +35,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="Index.html">About Me</a></li>
+							<li><a href="index.html">About Me</a></li>
 							<li class="active"><a href="Projects.html">Projects</a></li>
 							<!--<li><a href="Index.html">About Me</a></li>-->
 
