--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">About Me</a></li>
+							<li class="active"><a href="Index.html">About Me</a></li>
 							<li><a href="Projects.html">Projects</a></li>
+							<li><a href="Blogs.html">Blogs</a></li>
 							<!--<li class="active"><a href="Index.html">About Me</a></li>-->
 						</ul>
 						<ul class="icons">
