--- a/Blogs.html
+++ b/Blogs.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>Portfolio</title>
+    <title>Blogs</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -18,15 +18,7 @@
     <div id="wrapper" class="fade-in">
 
         <!-- Intro -->
-        <div id="intro">
-            <h1>
-                Rajesh Gaddam
-            </h1>
-            <p>Experienced Full Stack .NET Developer Dedicated to Crafting Innovative Solutions for Complex Challenges</p>
-            <ul class="actions">
-                <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-            </ul>
-        </div>
+       
 
         <!-- Header -->
         <header id="header">
@@ -36,10 +28,9 @@
         <!-- Nav -->
         <nav id="nav">
             <ul class="links">
-                <li><a href="Index.html">About Me</a></li>                
+                <li><a href="Index.html">About Me</a></li>
                 <li><a href="Projects.html">Projects</a></li>
-                <li class="active"><a href="Blogs.html">Blogs</a></li>          
-
+                <li class="active"><a href="Blogs.html">Blogs</a></li>
 
             </ul>
             <ul class="icons">
@@ -52,106 +43,7 @@
         <div id="main">
 
             <!-- Featured Post -->
-            <article class="post featured">
-                <header class="major">
-                    <h3>
-                        <a href="https://github.com/rajesh-gaddam-07/Mango">
-                            E-commerce Microservices Solution <br />
-                            using .NET Technologies
-                        </a>
-                    </h3>
-                    <p>
-                        The project's goal is to build a resilient e-commerce system with a microservices architecture in .NET Core,<br />
-                        integrating key modules and ensuring smooth communication and secure authentication.<br />
-                        It emphasizes clarity and understanding through comprehensive API documentation.
-                    </p>
-                </header>
-                <a href="https://github.com/rajesh-gaddam-07/Mango" class="image main"><img src="images/MicroServices.png" alt="" /></a>
-                <ul class="actions special">
-                    <li><a href="https://github.com/rajesh-gaddam-07/Mango" class="button large">View Code</a></li>
-                </ul>
-            </article>
-
-            <!-- Posts -->
-            <section class="posts">
-                <article>
-                    <header>
-                        <h2>
-                            <a href="https://github.com/rajesh-gaddam-07/MagicVilla">
-                                RESTful API with .NET Core
-                            </a>
-                        </h2>
-                    </header>
-                    <a href="https://github.com/rajesh-gaddam-07/MagicVilla" class="image fit"><img src="images/RESTAPI.png" alt="" /></a>
-                    <p>
-                        The goal of this Project is to showcase the skills to develop RESTful APIs in ASP.NET Core, covering fundamental concepts,repository pattern implementation with Entity Framework, authentication, and authorization,culminating in deploying a complete project to Azure.
-                    </p>
-                    <ul class="actions special">
-                        <li><a href="https://github.com/rajesh-gaddam-07/MagicVilla" class="button">View Code</a></li>
-                    </ul>
-                </article>
-                <article>
-                    <header>
-                        <h2>
-                            <a href="https://github.com/rajesh-gaddam-07/RabbitMQ">
-                                RabbitMQ Essentials: Building Decoupled Microservices Systems
-                            </a>
-                        </h2>
-                    </header>
-                    <a href="https://github.com/rajesh-gaddam-07/RabbitMQ" class="image fit"><img src="images/RabbitMQ.png" alt="" /></a>
-                    <p>This Project introduces developers and businesses to the benefits of using RabbitMQ as a message broker within their systems. By leveraging RabbitMQ, participants will learn to establish highly decoupled microservices architectures easily, deployable across various cloud platforms and on-premise setups. The Project also explores RabbitMQ's extensive features and extensibility through plugins, enabling efficient message translation between formal messaging protocols of senders and receivers.</p>
-                    <ul class="actions special">
-                        <li><a href="https://github.com/rajesh-gaddam-07/RabbitMQ" class="button">View Code</a></li>
-                    </ul>
-                </article>
-                <article>
-                    <header>
-                        <h2>
-                            <a href="https://github.com/rajesh-gaddam-07/git-tutorial">
-                                Git Mastery: A Comprehensive Guide to Version Control
-                            </a>
-                        </h2>
-                    </header>
-                    <a href="https://github.com/rajesh-gaddam-07/git-tutorial" class="image fit"><img src="images/GIT.png" alt="" /></a>
-                    <p>This project serves as a comprehensive tutorial for mastering Git, a powerful version control system widely used in software development. This project will help to gain a deep understanding of Git's fundamentals, including branching, merging, rebasing, and conflict resolution. The tutorial covers best practices for collaboration, including working with remote repositories, handling branches effectively, and utilizing Git workflows such as GitFlow</p>
-                    <ul class="actions special">
-                        <li><a href="https://github.com/rajesh-gaddam-07/git-tutorial" class="button">View Code</a></li>
-                    </ul>
-                </article>
-                <article>
-                    <header>
-                        <h2>
-                            <a href="https://github.com/rajesh-gaddam-07/Business-Contact-Interaction-Tracking-System">
-                                Relational Database Design & Implementation with PostgreSQL
-                            </a>
-                        </h2>
-                    </header>
-                    <br />
-                    <a href="https://github.com/rajesh-gaddam-07/Business-Contact-Interaction-Tracking-System" class="image fit"><img src="images/PostgreSQL.png" class="center" alt="" /></a>
-
-
-                    <p>This project entails designing and implementing a relational database using PostgreSQL. It involves conceptual and logical design phases, SQL implementation, and documentation, culminating in a comprehensive database solution for a specified case study. Grading is based on design quality, SQL implementation, and the completeness of the project report.</p>
-                    <br />
-                    <ul class="actions special">
-                        <li><a href="https://github.com/rajesh-gaddam-07/Business-Contact-Interaction-Tracking-System" class="button">View Code</a></li>
-                    </ul>
-                </article>
-                <article>
-                    <header>
-                        <h2>
-                            <a href="https://github.com/rajesh-gaddam-07/Road-Traffic-Analysis-Vehicle-Detection-and-traffic-using-Hadoop">
-                                Road Traffic Analysis using YOLOv4 and Deep Sort
-                            </a>
-                        </h2>
-                    </header>
-                    <a href="https://github.com/rajesh-gaddam-07/Road-Traffic-Analysis-Vehicle-Detection-and-traffic-using-Hadoop" class="image fit"><img src="images/ML.png" alt="" /></a>
-                    <p>Implemented a robust real-time traffic monitoring system utilizing YOLOv4 and DeepSORT algorithms for vehicle detection and tracking. Achieved a 20% decrease in average commute time and enhanced traffic flow efficiency through accurate data collection and preprocessing.</p>
-                    <ul class="actions special">
-                        <li><a href="https://github.com/rajesh-gaddam-07/Road-Traffic-Analysis-Vehicle-Detection-and-traffic-using-Hadoop" class="button">View Code</a></li>
-                    </ul>
-                </article>
-
-            </section>
+           
 
             <!-- Footer -->
             <!--<footer>
