--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="Index.html" class="logo">RG</a>
+						<a href="" class="logo">RG</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="Index.html">About Me</a></li>
+							<li class="active"><a href="index.html">About Me</a></li>
 							<li><a href="Projects.html">Projects</a></li>
 							<li><a href="Blogs.html">Blogs</a></li>
 							<!--<li class="active"><a href="Index.html">About Me</a></li>-->
