--- a/Blogs.html
+++ b/Blogs.html
@@ -28,7 +28,7 @@
         <!-- Nav -->
         <nav id="nav">
             <ul class="links">
-                <li><a href="Index.html">About Me</a></li>
+                <li><a href="index.html">About Me</a></li>
                 <li><a href="Projects.html">Projects</a></li>
                 <li class="active"><a href="Blogs.html">Blogs</a></li>
 
